--- a/Portfolio Website/Project/style.css
+++ b/Portfolio Website/Project/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Arial', sans-serif;
     transition: background-color 0.3s, color 0.3s;
+    background-color: #F4F2EE;
 }
 
 .hero {
