--- a/Portfolio Website/Project/style.css
+++ b/Portfolio Website/Project/style.css
@@ -1,117 +1,17 @@
 body {
+    background-color: #F4F2EE;
     font-family: 'Arial', sans-serif;
     transition: background-color 0.3s, color 0.3s;
-    background-color: #F4F2EE;
-}
-
-.hero {
-    background: linear-gradient(90deg, rgb(243, 85, 85) 0%, rgba(123, 158, 255, 1) 100%);
-    color: white;
-    text-align: center;
-    padding: 100px 0;
-    padding-top: 170px;
-}
-
-.section-title {
-    font-family: 'Pacifico', cursive;
-}
-
-.container {
-    max-width: 1080px;
-    margin: 0 auto;
-}
-
-.img-container {
-    display: inline-block;
-    overflow: hidden;
-    width: 250px;
-    height: 250px;
-    border-radius: 50%;
-    margin: 0 auto;
-    border: 3px solid #007bff;
-}
-.img-container1 {
-    display: inline-block;
-    overflow: hidden;
-    width: 320px;
-    height: 320px;
-    border-radius: 5%;
-    margin: 0 auto;
-    border: 2px solid #0048ff;
-}
-
-.img-container img {
-    width: 100%;
-    height: auto;
-    display: block;
-    border-radius: 50%;
-}
-
-.navbar {
-    background-color: #007bff;
-}
-
-.navbar-brand,
-.nav-link {
-    color: #fff;
-}
-
-.navbar-brand {
-    font-family: 'Roboto', sans-serif;
-    font-size: 24px;
-    font-weight: bold;
-}
-
-.nav-item {
-    padding: auto;
-    margin: auto;
-    font-family: 'Roboto', sans-serif;
-}
-
-.section-title {
-    text-align: center;
-    margin: 40px 0;
-    color: #007bff;
-}
-
-.section-title h2 {
-    display: inline-block;
-    padding: 10px 20px;
-    border-bottom: 3px solid #007bff;
-}
-
-.info {
-    padding: 20px;
-    background-color: #ffffff;
-    border-radius: 10px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    margin-bottom: 20px;
-    transition: transform 0.3s;
-    color: #343a40;
-}
-
-.info:hover {
-    transform: translateY(-10px);
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-
-}
-
-.footer {
-    background-color: #007bff;
-    color: white;
-    text-align: center;
-    padding: 20px 0;
-    border-top: 4px solid #ddd;
 }
 
 .contact-form {
     background-color: #ffffff;
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    margin-top: 40px;
-    transition: background-color 0.3s;
     color: #343a40;
+    margin-top: 40px;
+    padding: 20px;
+    transition: background-color 0.3s;
 }
 
 .contact-form .form-control {
@@ -122,11 +22,11 @@ body {
 
 .contact-form button {
     background-color: #007bff;
-    color: white;
     border: none;
-    padding: 12px 20px;
     border-radius: 10px;
+    color: white;
     cursor: pointer;
+    padding: 12px 20px;
     transition: background-color 0.3s;
 }
 
@@ -135,24 +35,122 @@ body {
 }
 
 .contact-info {
-    text-align: center;
     margin: 40px 0;
+    text-align: center;
 }
 
 .contact-info .icon {
+    color: #007bff;
     font-size: 2rem;
     margin-bottom: 10px;
-    color: #007bff;
 }
 
 .contact-info .info-item {
     margin-bottom: 20px;
 }
 
+.container {
+    margin: 0 auto;
+    max-width: 1080px;
+}
+
+.footer {
+    background-color: #007bff;
+    border-top: 4px solid #ddd;
+    color: white;
+    padding: 20px 0;
+    text-align: center;
+}
+
+.hero {
+    background: linear-gradient(90deg, rgb(243, 85, 85) 0%, rgba(123, 158, 255, 1) 100%);
+    color: white;
+    padding: 100px 0;
+    padding-top: 170px;
+    text-align: center;
+}
+
+.img-container {
+    border: 3px solid #007bff;
+    border-radius: 50%;
+    display: inline-block;
+    height: 250px;
+    margin: 0 auto;
+    overflow: hidden;
+    width: 250px;
+}
+
+.img-container img {
+    border-radius: 50%;
+    display: block;
+    height: auto;
+    width: 100%;
+}
+
+.img-container1 {
+    border: 2px solid #0048ff;
+    border-radius: 5%;
+    display: inline-block;
+    height: 320px;
+    margin: 0 auto;
+    overflow: hidden;
+    width: 320px;
+}
+
+.info {
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    color: #343a40;
+    margin-bottom: 20px;
+    padding: 20px;
+    transition: transform 0.3s;
+}
+
+.info:hover {
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+    transform: translateY(-10px);
+}
+
+.nav-item {
+    font-family: 'Roboto', sans-serif;
+    margin: auto;
+    padding: auto;
+}
+
+.navbar {
+    background-color: #007bff;
+}
+
+.navbar-brand {
+    color: #fff;
+    font-family: 'Roboto', sans-serif;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.navbar-brand,
+.nav-link {
+    color: #fff;
+}
+
+.section-title {
+    color: #007bff;
+    font-family: 'Pacifico', cursive;
+    margin: 40px 0;
+    text-align: center;
+}
+
+.section-title h2 {
+    border-bottom: 3px solid #007bff;
+    display: inline-block;
+    padding: 10px 20px;
+}
+
 .social-icons a {
     color: white;
-    margin: 0 10px;
     font-size: 1.5rem;
+    margin: 0 10px;
     transition: color 0.3s;
 }
 
@@ -161,49 +159,16 @@ body {
 }
 
 
-/* css for dark mode */
+
+/* CSS for Dark Mode */
 .dark-mode {
     background-color: #343a40;
     color: #e0e0e0;
 }
 
-.dark-mode .navbar {
-    background-color: #222;
-}
-
-.dark-mode .hero {
-    background-color: #2234ae;
-    background-image: linear-gradient(315deg, #2234ae 0%, #191714 74%);
-}
-
-.dark-mode .section-title h2 {
-    border-color: rgb(72, 210, 72);
-    color: #5ee1f5;
-}
-
-.dark-mode .project-item {
-    background-color: #3C3C3C;
-    color: #e0e0e0;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-}
-
-.dark-mode .project-item:hover {
-    background-color: #5a5a5a;
-    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
-}
-
-.dark-mode .footer {
-    background-color: #222;
-    border-top: 4px solid #444;
-}
-
 .dark-mode .contact-form {
     background-color: #454545;
     color: #e0e0e0;
-}
-
-.dark-mode .contact-info .icon {
-    color: #5ee1f5;
 }
 
 .dark-mode .contact-form button {
@@ -215,6 +180,20 @@ body {
     color: whitesmoke;
 }
 
+.dark-mode .contact-info .icon {
+    color: #5ee1f5;
+}
+
+.dark-mode .footer {
+    background-color: #222;
+    border-top: 4px solid #444;
+}
+
+.dark-mode .hero {
+    background-color: #2234ae;
+    background-image: linear-gradient(315deg, #2234ae 0%, #191714 74%);
+}
+
 .dark-mode .info {
     background-color: #5a5a5a;
     color: #e0e0e0;
@@ -222,4 +201,24 @@ body {
 
 .dark-mode .info:hover {
     background-color: #6d6d6d;
+}
+
+.dark-mode .navbar {
+    background-color: #222;
+}
+
+.dark-mode .project-item {
+    background-color: #3C3C3C;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    color: #e0e0e0;
+}
+
+.dark-mode .project-item:hover {
+    background-color: #5a5a5a;
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
+}
+
+.dark-mode .section-title h2 {
+    border-color: rgb(72, 210, 72);
+    color: #5ee1f5;
 }
