--- a/Portfolio Website/Project/style.css
+++ b/Portfolio Website/Project/style.css
@@ -1,38 +1,3 @@
-.carousel-control-prev-icon,
-    .carousel-control-next-icon {
-        background-color: blue; /* Adjust color if needed */
-        border-radius: 50%;
-        background-size: 50%; /* Adjust icon size */
-        background-repeat: no-repeat;
-        background-position: center;
-    }
-
-    .carousel-control-prev,
-    .carousel-control-next {
-        width: 5%; /* Adjust size as needed */
-    }
-
-    /* Responsive adjustments */
-    @media (min-width: 768px) {
-        .carousel-control-prev,
-        .carousel-control-next {
-            width: 4%; /* Adjust for larger screens */
-        }
-    }
-
-    @media (min-width: 992px) {
-        .carousel-control-prev,
-        .carousel-control-next {
-            width: 3%; /* Further adjust for very large screens */
-        }
-    }
-
-    @media (min-width: 1200px) {
-        .carousel-control-prev,
-        .carousel-control-next {
-            width: 2.5%; /* Fine-tune for extra-large screens */
-        }
-    }
 body {
     background-color: #F4F2EE;
     font-family: 'Arial', sans-serif;
@@ -133,18 +98,22 @@ body {
 }
 
 .img-container2 {
-    border: 1.5px solid green;
+    border-top: 5px solid royalblue;
+    border-right: 5px solid purple;
+    border-bottom: 5px solid green;
+    border-left: 5px solid yellowgreen;
     border-radius: 8px;
     /* Slightly rounded corners */
-    height: 200px;
+    width: 100%;
     /* Adjusted height */
-    margin-bottom: 15px;
+    margin-bottom: 10px;
     /* Space below the image */
     overflow: hidden;
-    width: 100%;
+    height: 200px;
     /* Full width of the card */
     object-fit: cover;
     /* Ensures the image covers the area without distortion */
+    padding: 5px 10;
 }
 
 .info {
@@ -160,6 +129,7 @@ body {
 .info:hover {
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
     transform: translateY(-10px);
+    cursor: pointer;
 }
 
 .nav-item {
@@ -197,14 +167,12 @@ body {
     padding: 10px 20px;
 }
 
-.section-title1 {
+.certi-title {
     color: #007bff;
     font-family: 'Pacifico', cursive;
-    margin: 40px 0;
     text-align: center;
     border-bottom: 1px solid #007bff;
     display: inline-block;
-    padding: 10px 20px;
 }
 
 
@@ -295,7 +263,7 @@ body {
     color: #5ee1f5;
 }
 
-.dark-mode .section-title1 {
+.dark-mode .certi-title {
     border-color: rgb(72, 210, 72);
     color: #5ee1f5;
 }
