--- a/Portfolio Website/Project/style.css
+++ b/Portfolio Website/Project/style.css
@@ -116,6 +116,16 @@ body {
     padding: 5px 10;
 }
 
+.img-container3 {
+    border: 2px solid #0048ff;
+    border-radius: 5%;
+    display: inline-block;
+    height: 270px;
+    margin: 0 auto;
+    overflow: hidden;
+    width: 300px;
+}
+
 .info {
     background-color: #ffffff;
     border-radius: 10px;
