--- a/Portfolio Website/Project/style.css
+++ b/Portfolio Website/Project/style.css
@@ -95,6 +95,7 @@ body {
     margin: 0 auto;
     overflow: hidden;
     width: 320px;
+    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3), 0 8px 8px rgba(0, 0, 0, 0.15);
 }
 
 .img-container2 {
@@ -125,7 +126,6 @@ body {
     overflow: hidden;
     width: 300px;
 }
-
 .info {
     background-color: #ffffff;
     border-radius: 10px;
@@ -139,7 +139,21 @@ body {
 .info:hover {
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
     transform: translateY(-10px);
-    cursor: pointer;
+}
+
+.info1 {
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    color: #343a40;
+    margin-bottom: 20px;
+    padding: 20px;
+    transition: transform 0.3s;
+}
+
+.info1:hover {
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+    transform: translateY(-5px);
 }
 
 .nav-item {
@@ -208,6 +222,16 @@ body {
     color: green;
 }
 
+.edu-text-shadow {
+    font-size: 1.25rem;
+    color: rgb(26, 63, 174);
+    letter-spacing: 2px;
+    transform: perspective(1000px) rotateX(5deg) rotateY(5deg);
+    text-shadow:
+        1px 1px 2px rgba(0, 0, 0, 0.2),
+        -1px -1px 3px rgba(255, 255, 255, 0.3),
+        2px 2px 4px rgba(0, 0, 0, 0.3);
+}
 
 
 /* CSS for Dark Mode */
@@ -234,6 +258,25 @@ body {
     color: #5ee1f5;
 }
 
+.dark-mode .certi-title {
+    border-color: rgb(72, 210, 72);
+    color: #5ee1f5;
+}
+
+.dark-mode .edu-text-shadow {
+    font-size: 1.20rem;
+    color: white;
+    letter-spacing: 2px;
+    transform: perspective(1000px) rotateX(5deg) rotateY(5deg);
+    text-shadow:
+        2px 2px 5px rgba(0, 0, 0, 0.4),
+        /* Dark shadow for depth */
+        -2px -2px 4px rgba(255, 255, 255, 0.2),
+        /* Subtle light shadow */
+        3px 3px 8px rgba(0, 0, 0, 0.3);
+    /* Soft highlight shadow */
+}
+
 .dark-mode .footer {
     background-color: #222;
     border-top: 4px solid #444;
@@ -245,12 +288,25 @@ body {
 }
 
 .dark-mode .info {
-    background-color: #5a5a5a;
+    background-color: #2c2c2c;
+    border-radius: 10px;
     color: #e0e0e0;
+    box-shadow: 0 2px 10px rgba(225, 231, 219, 0.429);
 }
 
 .dark-mode .info:hover {
-    background-color: #6d6d6d;
+    box-shadow: 0 2px 10px white;
+}
+
+.dark-mode .info1 {
+    background-color: #2c2c2c;
+    border-radius: 10px;
+    color: #e0e0e0;
+    box-shadow: 0 2px 10px rgba(225, 231, 219, 0.429);
+}
+
+.dark-mode .info1:hover {
+    box-shadow: 0 2px 10px rgba(255, 255, 255, 0.804);
 }
 
 .dark-mode .navbar {
@@ -269,11 +325,6 @@ body {
 }
 
 .dark-mode .section-title h2 {
-    border-color: rgb(72, 210, 72);
-    color: #5ee1f5;
-}
-
-.dark-mode .certi-title {
     border-color: rgb(72, 210, 72);
     color: #5ee1f5;
 }
