--- a/Portfolio Website/Project/style.css
+++ b/Portfolio Website/Project/style.css
@@ -188,6 +188,15 @@ body {
     transition: transform 0.3s;
 }
 
+.info h4 {
+    border-bottom: 1px solid gainsboro;
+    display: inline-block;
+    /* keeps underline only under the text */
+    padding-bottom: 1px;
+    /* adds spacing before line */
+}
+
+
 .info:hover {
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
     transform: translateY(-10px);
@@ -356,6 +365,14 @@ body {
     border-radius: 10px;
     color: #e0e0e0;
     box-shadow: 0 2px 10px rgba(225, 231, 219, 0.429);
+}
+
+.dark-mode .info h4 {
+    border-bottom: 1px solid rgb(0, 183, 255);
+    display: inline-block;
+    /* keeps underline only under the text */
+    padding-bottom: 1px;
+    /* adds spacing before line */
 }
 
 .dark-mode .info:hover {
