working on projects

--- a/Portfolio Website/Project/style.css
+++ b/Portfolio Website/Project/style.css
@@ -169,7 +169,7 @@ body {
 }
 
 .img-container3 {
-    border: 2px solid #0048ff;
+    border: 1.5px solid #58d3f8;
     border-radius: 5%;
     display: inline-block;
     height: 270px;
