--- a/Portfolio Website/Project/style.css
+++ b/Portfolio Website/Project/style.css
@@ -170,12 +170,13 @@ body {
 
 .img-container3 {
     border: 1.5px solid #58d3f8;
-    border-radius: 5%;
-    display: inline-block;
-    height: 270px;
-    margin: 0 auto;
+    border-radius: 5px;
+    width: 100%;
+    margin-bottom: 10px;
     overflow: hidden;
-    width: 300px;
+    height: 200px;
+    object-fit: cover;
+    padding: 5px 10;
 }
 
 .info {
