--- a/Portfolio Website/Project/style.css
+++ b/Portfolio Website/Project/style.css
@@ -225,7 +225,7 @@ body {
 }
 
 .navbar {
-    background-color: #007bff;
+    background-color: royalblue;
 }
 
 .navbar-brand {
@@ -392,7 +392,7 @@ body {
 }
 
 .dark-mode .navbar {
-    background-color: #6543e2;
+    background-color: rgb(0, 0, 0);
 }
 
 .dark-mode .project-item {
